--- a/papers/system-f-in-agda/bibliography.bib
+++ b/papers/system-f-in-agda/bibliography.bib
@@ -101,10 +101,10 @@ editor = {C., Schürmann}
 }
 
 @misc{formalisation,
-  title={{L}iterate {A}gda source of {MPC 2019} submission},
+  title={{L}iterate {A}gda source of {MPC 2019} paper},
   author={James Chapman and Roman Kireev and Chad Nester and Philip Wadler},
   year={2019},
-  howpublished={\url{https://gist.github.com/jmchapman/43f049ffaf091391534e458b1c3b9b59}}
+  howpublished={\url{https://github.com/input-output-hk/plutus/blob/f9f7aef94d9614b67c037337079ad89329889ffa/papers/system-f-in-agda/paper.lagda}}
 }
 
 
