--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -169,18 +169,17 @@ makeLift ''EnglishAuction
 <1> <<endmatter#currency-symbol,Currency symbol>> of the token.
 
 <2> <<endmatter#token-name,Token name>> of the token. As discussed above,
-    we assume that the token defined by `eaSymbol` and `eaName` is _unique_.
+    we assume that the token is defined by `eaSymbol` and that `eaName` is _unique_.
 
 <3> Public key of the token owner.
 
 <4> Minimal amount of the first bid. This is the minimal price the owner is
     willing to accept for his token.
 
-<5> Minimal bid increase, i.e. how much higher than the previous bid a new bid
-    has to be.
+<5> Minimal bid increase, i.e. the minimal increase amouunt of the new bid.
 
 <6> Deadline for bids. Once the deadline has passed, no more bids can be placed,
-    and the token owner can retrieve the highest bid (if there was one)
+    and the token owner can retrieve the highest bid (if there was one),
     or reclaim his token.
 
 <7> Deadline for the token owner to retrieve the highest bid. Once _this_
@@ -188,7 +187,7 @@ makeLift ''EnglishAuction
 
 include::statemachine.adoc[]
 
-What state do we need to keep track of an auction? We will need to record
+What state do we need to keep track of for an auction? We will need to record
 who made which bids, which suggests using a list `[(PubKey, Ada)]`
 of key-ada pairs. When a new bid is
 placed, we will add it to the front of the list, and when a bidder has been
@@ -196,7 +195,7 @@ outbid and reclaims her bid, we will remove the corresponding pair from the
 list (which will never be at the head of the list, because the head of the list
 contains the highest bid, which can not be reclaimed).
 
-When the deadline has passed and the token owner claims the highest bid,
+When the deadline has passed, and the token owner claims the highest bid,
 we want to record this in an extra piece of state, a simple `Bool` indicating
 whether the token owner has already made his claim.
 
@@ -242,13 +241,13 @@ makeLift ''EAAction
     token owner.
 
 During the duration of the auction, the token will be locked in an output
-at the script address, and each transaction will have that output as input and
+at the script address. Each transaction will have that output as input and
 create a new output at that address containing the token (except at the very
 end, when the highest bidder takes the token for herself).
 
 Function `eaOutput` will give us the unique output at the script address,
 given the pending transaction,
-and it will just log a message and do not do anythiny if there is not exactly one such output.
+and it will simply log a message and do nothing if there is not an exact output.
 
 [source,haskell]
 ----
@@ -258,7 +257,7 @@ eaOutput tx = case uniqueElement (findContinuingOutputs tx) of
     Just i  -> pendingTxOutputs tx !! i
 ----
 
-We find the highest bid (if there is one) by just grabbing the head of the list
+We find the highest bid (if there is one), by using the head of the list
 in the first component of our state. This assumes, of course, that the highest
 bid will always be at the head. We will make sure of this by rejecting bids that
 are not sufficiently higher than the previous highest bid.
@@ -271,11 +270,11 @@ highestBid (x : _, _) = Just x
 ----
 
 Function `minNewBid` determines the minimal amount of a new bid,
-which is the minimal bid if there has not been a bid yet
-and the currently higest bid increased by the minimal increment if there has.
+which is the minimal bid if there has not yet been a bid
+and the currently higest bid, increased by the minimal increment, if there has been a bid.
 
 If the second component of the state is `True`, the auction is already over,
-so no new bid is allowed, and we throw an exception.
+so no new bids are allowed, an exception occurs.
 
 [source,haskell]
 ----
@@ -288,7 +287,7 @@ minNewBid ea s         = case highestBid s of
 
 When we validate transactions for an auction, we will often have to check
 whether the _values_ of the unique auction script input and the unique auction
-script output are correct. Function `valueCorrect` is a helper for that.
+script output are correct. Function `valueCorrect` is a helper for that case.
 It takes the pending transaction and a binary predicate on the two values as
 input and then checks that predicate on the two relevant values.
 
@@ -360,7 +359,7 @@ eaTransit _ ([], _)    EAReclaimToken = Just ([], False)
 
 In addition to defining our state machine, we can also utilize `eaTransit`
 to write a function that takes
-the auction, the action and the data script of the unique script input as
+the auction, the action, and the data script of the unique script input as
 arguments and computes the correct data script for the unique script output:
 
 [source,haskell]
@@ -380,7 +379,7 @@ updateEAData ea a (DataScript script) = DataScript $
 ----
 
 Next we write the checking part of our state machine.
-Everything just depending on the input
+Everything depends on the input
 data script and the action is already contained in `eaTransit`
 (via returning `Nothing`),
 so in `eaCheck`, we have to check those conditions that depend on the pending
@@ -412,7 +411,7 @@ eaCheck ea _ (EABid _ ada) tx
 
 <2> This is the first time we use our function `valueCorrect`
     from above. In this case, we check that the script output value equals the
-    script input value plus the bid.
+    script input value, plus the bid.
 
 Note that we do _not_ check whether the transaction has been signed by the
 public key mentioned in the action. We do this on purpose: If the person making
@@ -497,7 +496,7 @@ eaCheck _ _ (EAReclaimBid pk ada) tx
 ----
 
 <1> The reclaim must be authorized by the public key associated with the bid.
-    Note that we do not check _where_ the reclaimed bid is sent to, just that the
+    Note that we do not check to _where_ the reclaimed bid is sent, only that the
     transaction is signed by the right person.
 
 <2> The output script value must be the input script value minus the bid that is
@@ -706,12 +705,12 @@ forge s n = do
 ----
 ////
 
-The on-chain part is done with this, and we can turn our attention to the
+The on-chain part is now complete, and we can turn our attention to the
 wallet endpoints.
 
 Before the token owner can start the auction, all potential bidders need to
 _watch_ the auction address, so that their wallets will be aware of the (unique)
-script output there.
+script output located there.
 
 [source, haskell]
 ----
@@ -791,12 +790,12 @@ withAuctionOutput' ea notFound cont = do
     given a reference to the output, the output itself and its data script.
 
 <3> If we do not find the output containing the token,
-    we return the "exceptional" result.
+    we return a result of "exceptional".
 
 <4> Having found the output and its data script, we invoke our continuation.
 
 <5> If the output is not a script output and thus does not have a data script,
-    we return the "exceptional" result.
+    we return a result of "exceptional".
 
 <6> We check that the output contains the token.
 
@@ -813,7 +812,7 @@ withAuctionOutput ea =
 This is a variant of `withAuctionOutput'`,
 which will do nothing if the output is not found.
 
-Using this, it is realtively straight forward to implement the remaining
+Using this, it is relatively straightforward to implement the remaining
 endpoints. We start with `bid` for placing a bid:
 
 [source, haskell]
@@ -940,11 +939,11 @@ claimToken ea = do
             }
 ----
 
-<1> The token is taken out of the script...
+<1> The token is taken out of the script.
 
-<2> ...and payed to the highest bidder.
+<2> It is then payed to the highest bidder.
 
-<3> This can only been done after the token owner has had time to claim the
+<3> This can only happen after the token owner has had time to claim the
     highest bid.
 
 Endpoint `reclaimBid` will be used by bidders who have been outbid:
@@ -978,13 +977,13 @@ reclaimBid ea ada = do
             }
 ----
 
-<1> The old bid is taken out of the script...
+<1> The old bid is taken out of the script.
 
-<2> ...and paid to the bidder.
+<2> It is then paid to the bidder.
 
 <3> Such reclaims can in principle be done at any time. They will fail, however,
     if the auction winner has already taken the token out of the script, because
-    there will no longer be a unique output then.
+    there will no longer be a unique output.
 
 The final endpoint, `reclaimToken`, will be used by the token owner in case of a
 failed auction, an auction without any bids.
@@ -1055,7 +1054,7 @@ value changes. If the value goes up, a new highest bid has been placed. If it
 goes down, an outbid bidder has reclaimed her obsolete bid.
 
 To simplify working with this idea, we write a helper function
-that will allow us to execute a custom action at each slot after auction start,
+that will allow us to execute a custom action at each slot after an auction starts,
 where the action is allowed to depend on the current slot and the currently
 highest bid:
 
@@ -1124,23 +1123,23 @@ trackAuction ea initS action = do
 <5> If the output can not be found, the auction probably has not started yet,
     and we simply wait for the next slot.
 
-<6> We grab the unique script output...
+<6> We grab the unique script output.
 
-<7> ...and use it to update `total`...
+<7> We then use it to update `total`.
 
-<8> ...and `highest`.
+<8> We also update `highest`.
 
 <9> We perform our custom action with the current slot,
     the current value for `highest`,
     the current data script
     and the current custom state.
 
-<10> If our custom action indicated we were done, we stop. Otherwise we
-     wait for the next slot and repeat.
+<10> If our custom action indicates that we are finished then we stop. Otherwise, we
+     wait for the next slot and repeat the process.
 
 Using this, we can provide a more convenient, "automated" endpoint
 `runAuction` for the auction owner, which will start the auction,
-keep track of the highest bid and either claim the highest bid or
+keep track of the highest bid, and either claim the highest bid or
 reclaim the token once the auction is over. We do not need custom
 state for this, so we can use custom state type `()`.
 
@@ -1188,7 +1187,7 @@ runAuction s n b inc e f = do
 
 <3> If `highest` is still zero, the auction failed, and we call `reclaimToken`.
 
-<4> In both case, we are done and return `True` to stop tracking.
+<4> In both cases, we are finished and return `True` to stop tracking.
 
 <5> If bidding is still ongoing, we return `False` to keep tracking.
 
@@ -1199,7 +1198,7 @@ and let her wallet take care of the rest.
 
 This is very tricky, though, even with our `trackAuction` helper.
 The reason is that even if the current highest bid is as high as the last bid
-we ourselves made, some other bidder could have made the same bid and managed
+we made ourselves, some other bidder could have made the same bid and managed
 to get her transaction validated before ours. Just tracking script values will
 not be able to help us here.
 
@@ -1313,23 +1312,23 @@ autoBid ea ada = do
 <2> Bidding only makes sense if we are willing to
     at least pay the minimal bid.
 
-<3> This time we use non-trivial custom state of type
-    `Maybe Ada`, indicating the last bid (if any)
+<3> This time we use a non-trivial custom state of type
+    `Maybe Ada`, indicating the last bid (if any),
     we placed.
 
 <4> We "unlift" the data script to see whether we are
     currently the highest bidder.
 
-<5> If we are _not_ the highest bidder and if we already
+<5> If we are _not_ the highest bidder, and if we already
     placed a bid, we reclaim that bid.
 
 <6> What we do next depends on which "era" of the auction we are in.
 
-<7> If we waited till `eaFinish ea`, we won the auction and claim the token.
+<7> If we waited till `eaFinish ea`, we have won the auction and can claim the token.
 
 <8> If bidding is over and we won, we just have to wait.
 
-<9> If bidding is over and we lost, we are done.
+<9> If bidding is over and we lost, we are finished.
 
 <10> Again - if bidding is over and we won, we just have to wait.
 
@@ -1338,7 +1337,7 @@ autoBid ea ada = do
 <12> If bidding is still ongoing and we do _not_ have the highest bid,
      we calculate the lowest possible higher bid.
 
-<13> If we are not willing to place a bid that high, we are done.
+<13> If we are not willing to place a bid that high, we are finished.
 
 <14> Otherwise, we place the new bid and wait.
 
